feat: add subtle glow effect to all headings and bold text

--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@
       scrollbar-width: none;
       /* Firefox */
     }
+
+    /* Subtle Glow for Headings */
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      text-shadow: 0 0 20px rgba(34, 197, 94, 0.3),
+        0 0 40px rgba(34, 197, 94, 0.15);
+    }
+
+    /* Glow for Bold Text */
+    strong,
+    b,
+    .font-bold,
+    .font-black {
+      text-shadow: 0 0 15px rgba(34, 197, 94, 0.25),
+        0 0 30px rgba(34, 197, 94, 0.1);
+    }
   </style>
   <script type="importmap">
 {
